--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <li>Advanced Machine Learning<br />
 15-Fall, 14-Spring</li>
 <li>Operating System Labs<br />
-15-Fall</li>
+<a href="http://ybwu.org/ecnu-oslabs/15-Fall/index.html">15-Fall</a></li>
 </ul>
 <h2 id="software">Software</h2>
 <p>Coming Soon</p>
