Add oslab 18 Fall, some publication

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <style type="text/css">
       code{white-space: pre-wrap;}
       span.smallcaps{font-variant: small-caps;}
-      div.line-block{white-space: pre-line;}
+      span.underline{text-decoration: underline;}
       div.column{display: inline-block; vertical-align: top; width: 50%;}
   </style>
-  <link rel="stylesheet" href="css/markdown.css">
+  <link rel="stylesheet" href="css/markdown.css" />
   <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
   <![endif]-->
@@ -28,7 +28,7 @@
 <li>Advanced Machine Learning<br />
 15-Fall, 14-Spring</li>
 <li>Operating System Labs<br />
-<a href="http://ybwu.org/ecnu-oslabs/index.html">17-Fall</a>, <a href="http://ybwu.org/ecnu-oslabs/16-Fall/index.html">16-Fall</a>, <a href="http://ybwu.org/ecnu-oslabs/15-Fall/index.html">15-Fall</a></li>
+<a href="http://ybwu.org/ecnu-oslabs/index.html">18-Fall</a>, <a href="http://ybwu.org/ecnu-oslabs/17-Fall/index.html">17-Fall</a>, <a href="http://ybwu.org/ecnu-oslabs/16-Fall/index.html">16-Fall</a>, <a href="http://ybwu.org/ecnu-oslabs/15-Fall/index.html">15-Fall</a></li>
 <li>Object Oriented Programming with Java<br />
 <a href="http://ybwu.org/ecnu-java/index.html">18-Spring</a>, <a href="http://ybwu.org/ecnu-java/17-Spring/index.html">17-Spring</a>, <a href="http://ybwu.org/ecnu-java/16-Spring/index.html">16-Spring</a>,</li>
 </ul>
@@ -36,8 +36,12 @@
 <p>Coming Soon</p>
 <h2 id="publication">Publication</h2>
 <ul>
+<li><p>Extracting Entities and Relations with Joint Minimum Risk Training<br />
+Changzhi Sun, Yuanbin Wu, Man Lan, Shiliang Sun, Wenting Wang, Kuang-Chih Lee, Kewen Wu, EMNLP 2018</p></li>
+<li><p>An Adversarial Joint Learning Model for Low-Resource Language Semantic Textual Similarity<br />
+Junfeng Tian, Man Lan, Yuanbin Wu, Jingang Wang, Long Qiu, Sheng Li, Jun Lang, Luo Si, ECIR 2018</p></li>
 <li><p>Inference on Syntactic and Semantic Structures for Machine Comprehension<br />
-Chenrui Li, Yuanbin Wu, Man Lan, AAAI 2018 (to appear)</p></li>
+Chenrui Li, Yuanbin Wu, Man Lan, AAAI 2018</p></li>
 <li><p>A Learning Error Analysis for Structured Prediction with Approximate Inference<br />
 Yuanbin Wu, Man Lan, Shiliang Sun, Qi Zhang, Xuanjing Huang, NIPS 2017</p></li>
 <li><p>A Fast and Lightweight System for Multilingual Dependency Parsing<br />
