--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <li>Advanced Machine Learning<br />
 15-Fall, 14-Spring</li>
 <li>Operating System Labs<br />
-<a href="https://github.com/ybwu/ecnu-oslab-up/blob/main/21-Fall/index.md">21-Fall</a>, <a href="http://ybwu.org/ecnu-oslabs/index.html">20-Fall</a>, <a href="http://ybwu.org/ecnu-oslabs/19-Fall/index.html">19-Fall</a>, <a href="http://ybwu.org/ecnu-oslabs/18-Fall/index.html">18-Fall</a>, <a href="http://ybwu.org/ecnu-oslabs/17-Fall/index.html">17-Fall</a>, <a href="http://ybwu.org/ecnu-oslabs/16-Fall/index.html">16-Fall</a>, <a href="http://ybwu.org/ecnu-oslabs/15-Fall/index.html">15-Fall</a></li>
+<a href="https://github.com/ybwu/ecnu-oslab-up/blob/main/21-Fall/index.md">21-Fall</a><a href="https://hub.fastgit.org/ybwu/ecnu-oslab-up/blob/main/21-Fall/index.md">(mirror)</a>, <a href="http://ybwu.org/ecnu-oslabs/index.html">20-Fall</a>, <a href="http://ybwu.org/ecnu-oslabs/19-Fall/index.html">19-Fall</a>, <a href="http://ybwu.org/ecnu-oslabs/18-Fall/index.html">18-Fall</a>, <a href="http://ybwu.org/ecnu-oslabs/17-Fall/index.html">17-Fall</a>, <a href="http://ybwu.org/ecnu-oslabs/16-Fall/index.html">16-Fall</a>, <a href="http://ybwu.org/ecnu-oslabs/15-Fall/index.html">15-Fall</a></li>
 <li>Object Oriented Programming with Java<br />
 <a href="http://ybwu.org/ecnu-java/index.html">21-Spring</a>, <a href="http://ybwu.org/ecnu-java/20-Fall/index.html">20-Fall</a>, <a href="http://ybwu.org/ecnu-java/19-Fall/index.html">19-Fall</a>, <a href="http://ybwu.org/ecnu-java/18-Spring/index.html">18-Spring</a>, <a href="http://ybwu.org/ecnu-java/17-Spring/index.html">17-Spring</a>, <a href="http://ybwu.org/ecnu-java/16-Spring/index.html">16-Spring</a>,</li>
 </ul>
